🐛 fix(components): restore clipped right border in mobile submenu
Add padding-right to mobileSubmenuInner so box-shadow and border on
submenu links are not clipped by overflow:hidden.

--- a/src/components/top-navigation-bar/TopNavigationBar.module.scss
+++ b/src/components/top-navigation-bar/TopNavigationBar.module.scss
@@ -748,6 +748,7 @@
 .mobileSubmenuInner {
   overflow: hidden;
   padding-left: 2px;
+  padding-right: 3px;
   opacity: 0;
   transition: opacity 0.28s ease 0.04s;
 }
